Ran Fuzzer. Time taken in seconds: 1